# AttosecondRayTracing

./: .gitignore  README.md  TODO  test.html
.github/workflows/: hugo.yaml
AttosecondRayTracing/: pyproject.toml
AttosecondRayTracing/src/ART/: ARTmain.py  ModuleAnalysis.py  ModuleAnalysisAndPlots.py  ModulePlottingMethods.py  ModulePlottingUtilities.py  ModuleTolerancing.py  __init__.py
AttosecondRayTracing_core/: pyproject.toml
AttosecondRayTracing_core/src/ARTcore/: ModuleDetector.py  ModuleMirror.py  ModuleOpticalChain.py  ModuleOpticalElement.py  ModuleOpticalRay.py  ModuleProcessing.py  ModuleSource.py  ModuleSupport.py  ModuleSurface.py
docs/build_scripts/: build_art_api.py  build_artcore_api.py
docs/src/content/Examples/: CONFIG_2toroidals_f-x-f.md
docs/src/content/Examples/examples/: CONFIG_SN2.py
docs/src/public/: 404.html  index.html  index.xml  offline-search-index.json  sitemap.xml
docs/src/public/addons-api/: index.html
docs/src/public/articles/: index.html
docs/src/public/articles/_print/: index.html
docs/src/public/categories/: index.html
docs/src/public/conventions/: index.html
docs/src/public/examples/: index.html
docs/src/public/examples/_print/: index.html
docs/src/public/examples/config_2toroidals_f-x-f/: index.html
docs/src/public/examples/test/: index.html
docs/src/public/modified-api/: index.html
docs/src/public/scss/: main.css.map
docs/src/public/tags/: index.html
docs/src/public/usage/: index.html
docs/src/public/usage/_print/: index.html
docs/src/public/usage/installation/: index.html
docs/src/public/usage/mainargs/: index.html
docs/src/public/usage/usage/: index.html
examples/: CONFIG_2toroidals_f-x-f.py  CONFIG_SN2.py  test_list.py  toroidals.py
(+5 files in other folders)
